# butler_rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
scripts/: install-launch-agent.sh  uninstall-launch-agent.sh
src/: aternos.rs  aternos_http.rs  auth.rs  config.rs  framework.rs  main.rs  minecraft.rs  provider.rs  run_history.rs  server_service.rs  state.rs  terminal.rs
src/commands/: aternos.rs  bot.rs  mod.rs  new_aternos_start.rs  ping.rs  server.rs
src/pterodactyl/: lifecycle.rs  mod.rs
src/server_service/: mod.rs  queries.rs  responses.rs  start.rs  status.rs  tracking.rs  types.rs
