[package]
name = "butler_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
headless_chrome = "1.0"
poise = { version = "0.6", features = ["cache"] }
serde = { version = "1", features = ["derive"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
anyhow = "1"
rand = "0.8"
