[package]
name = "butler_rs"
version = "0.3.0"
edition = "2024"
default-run = "butler_rs"
description = "Discord operations bot for Minecraft server workflows and diagnostics."
repository = "https://github.com/germagla/butler_rs"
license = "MIT"
keywords = ["discord", "minecraft", "operations", "bot", "aternos"]

[dependencies]
headless_chrome = "1.0"
poise = { version = "0.6", features = ["cache"] }
serde = { version = "1", features = ["derive"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
dotenvy = "0.15"
anyhow = "1"
rand = "0.8"
craftping = { version = "0.7", features = ["async-tokio"] }
serde_json = "1.0"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
